Increase timeout in credential provider to save account info.

Bug: 912163
Change-Id: Ic01fb78367762b6bddb41c29e557360798b6d1d1
Reviewed-on: https://chromium-review.googlesource.com/c/1363365
Commit-Queue: Roger Tawa <rogerta@chromium.org>
Reviewed-by: Owen Min <zmin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#614810}
Former-commit-id: fefcf7bd96ad81b9b009f884bd93a8ceedd4e7b1